--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -1,4 +1,29 @@
 .home {
-    width: 100%;
-    height: 100%;
+  align-content: center;
+  align-items: center;
+  text-align: center; 
+  width: 100%;
+  height: 33.33%;
+  
+
+  h1 {
+    font-family: 'Amatic SC', cursive;
+    font-size: 65px;
+    margin: 0;
+    padding: 2%;
   }
+
+}
+
+.button-div {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin: 2% auto;
+  align-self: center;
+  width: 30%;
+}
+.mainBunny {
+  margin-top: 6%;
+  height: 40vh;
+}
