--- a/src/components/buttons/ImperfectButton.scss
+++ b/src/components/buttons/ImperfectButton.scss
@@ -7,4 +7,6 @@
     border-style: solid;
     border-width: 3px;
     border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
+    color: inherit;
+    text-decoration: none;
 }
