--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -3,7 +3,8 @@
   align-items: center;
   text-align: center; 
   width: 100%;
-  height: 33.33%;
+  height: 100vh;
+  background-color: #68AA52;
   
 
   h1 {
@@ -13,6 +14,11 @@
     padding: 2%;
   }
 
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
 .button-div {
