--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,800');
 @import url('https://fonts.googleapis.com/css?family=Amatic+SC');
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+* { padding: 0; margin: 0; }
+html, body, #root {
+    min-height: 100% !important;
+    height: 100%;
 }
