--- a/src/components/buttons/ImperfectButton.scss
+++ b/src/components/buttons/ImperfectButton.scss
@@ -9,4 +9,6 @@
     border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
     color: inherit;
     text-decoration: none;
+    text-align: center;
+    cursor: pointer;
 }
