--- a/src/components/play/Play.scss
+++ b/src/components/play/Play.scss
@@ -2,15 +2,20 @@
   height: 100vh;
   width: 100%;
   background-color:  #68AA52;
+  text-align: center;
+  align-content: center;
+  align-items: center;
+  display:flex;
+  flex-direction: column;
+  justify-content: space-around;
+
+  .button {
+    width: 10%;
+  }
 }
 
 .canvas {
 	background-color: white;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    -webkit-transform: translate(-50%, -50%);
-	transform: translate(-50%, -50%);
 	height: 70%;
 	width:50%;
 }
