Can submit highscores

--- a/src/components/buttons/ImperfectButton.scss
+++ b/src/components/buttons/ImperfectButton.scss
@@ -1,6 +1,7 @@
 .button {
     padding: 0 5%;
-    min-width: 100px;
+    min-width: 160px;
+    white-space: nowrap;
     font-family: 'Amatic SC', cursive;
     font-size: 48px;
     border-color: black;
